WhatsHot Section UI and integration

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -35,7 +33,7 @@
 }
 
 body {
-  background: var(--background);
+  background: white;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
@@ -70,15 +68,14 @@ main {
   }
 } */
 
-
-.enquire-form  {
+.enquire-form {
   select > option {
-   height: 200px !important;
-   overflow-y: scroll;
+    height: 200px !important;
+    overflow-y: scroll;
   }
 }
 .unique-day::before {
-  content: '';
+  content: "";
   height: 100px;
   width: 100px;
   border-radius: 50%;
@@ -90,10 +87,12 @@ main {
 }
 
 .itinerary-line {
-  background-image: repeating-linear-gradient(to bottom,
-      #a3a3a3 0px,
-      #a3a3a3 8px,
-      transparent 8px,
-      transparent 16px);
+  background-image: repeating-linear-gradient(
+    to bottom,
+    #a3a3a3 0px,
+    #a3a3a3 8px,
+    transparent 8px,
+    transparent 16px
+  );
   background-size: 100% 16px;
 }
