--- a/app/globals.css
+++ b/app/globals.css
@@ -37,6 +37,7 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
+  overflow-x: hidden;
 }
 
 html,
